# python-project-52

./: .gitignore  README.md  db.sqlite3  makefile  pyproject.toml  setup.cfg
static/css/: styles.css
task_manager/: forms.py  mixins.py  models.py  settings.py  tests.py  urls.py  views.py
task_manager/label/: forms.py  tests.py  urls.py  views.py
task_manager/migrations/: 0001_initial.py  0002_alter_labelmodel_name_alter_taskmodel_author_and_more.py  0002_labelmodel_taskmodel_labels.py  0002_taskstatus_created_at.py  0003_alter_taskmodel_executor.py  0003_tasklabelrelation_alter_taskmodel_labels.py  0003_taskstatus_updated_at_taskmodel.py  0004_alter_taskmodel_assignee_alter_taskmodel_author_and_more.py  0005_alter_taskmodel_description_alter_taskmodel_status_and_more.py
task_manager/static/css/: styles.css
task_manager/status/: forms.py  tests.py  urls.py  views.py
task_manager/task/: forms.py  tests.py  urls.py  views.py
task_manager/task/filters/: TaskModelFilter.py
task_manager/templates/: delete_form.html  form.html  index.html  layout.html  messages.html
task_manager/templates/labels/: label_delete.html  label_list.html
task_manager/templates/status/: status_create.html  status_delete.html  status_list.html
task_manager/templates/statuses/: status_list.html
task_manager/templates/task/: task_delete.html  task_detail.html  task_form.html  task_list.html
task_manager/templates/tasks/: task_delete.html  task_detail.html  task_form.html  task_list.html
task_manager/user/: forms.py  tests.py  urls.py  views.py
(+10 files in other folders)
